Fix BLAS loading error by enabling JDK Vector API incubator module in javaOptions
Added --add-modules jdk.incubator.vector to allow netlib-java to use high-performance VectorBLAS implementation on Java 17.

Co-Authored-By: Claude <noreply@anthropic.com>